# pytemplate

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
inspyre/: main.py  validator_attack.py
pytemplate/: main.py
tests/: test_main.py
